# airfoil_simulator_cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/aerodynamics/: airfoil.cpp  airfoil.h  panel.cpp  panel.h  panel_methods.cpp  panel_methods.h
src/geometry/: line_segment.cpp  line_segment.h  point.cpp  point.h  point_cloud.h  polygon.cpp  polygon.h  vector.cpp  vector.h
src/linear_algebra/: matrix.cpp  matrix.h
test/unit_test/aerodynamics/: airfoil.cpp  panel.cpp  panel_methods.cpp
test/unit_test/geometry/: line_segment.cpp  point.cpp  point_cloud.cpp  polygon.cpp  vector.cpp
test/unit_test/linear_algebra/: matrix.cpp
